Refactor: 컨벤션에 맞추어 함수명 변경 및 mapper class 적용